--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="appicon.png">
     <link href='http://fonts.googleapis.com/css?family=Roboto:100,300,500' rel='stylesheet' type='text/css'>
     <link href="stylesheet/MyFontsWebfontsKit.css" rel="stylesheet" type="text/css">
-    <link href="stylesheet/base-rf.css" rel="stylesheet" type="text/css">
+    <link href="stylesheet/base.css" rel="stylesheet" type="text/css">
   </head>
 
 <body>
