--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       <div class="contentDivBody">
         <span class="contentDivBodyTitle">Eliminate your haircut woes</span>
         <br /><br />
-        <span class="contentDivBodyText">Forget trying to remember and explain that haircut from weeks ago. We help you <b>better communicate</b> your preferences to your haircare provider. 
-              In seconds, save and share your <b>personal preferences</b> to your HairStory profile.<br /></span>
+        <span class="contentDivBodyText">Forget trying to remember and explain that haircut from weeks ago. We help you <b>better communicate</b> your preferences to your haircare professional. 
+              In seconds, create and share your <b>personal preferences</b> to your HairStory profile.<br /></span>
       </div>
     </div>
 
