--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <span class="contentDivBodyTitle">Eliminate your haircut woes</span>
         <br /><br />
         <span class="contentDivBodyText">Forget trying to remember and explain that haircut from weeks ago. We help you <b>better communicate</b> your preferences to your haircare professional. 
-              In seconds, create and share your <b>personal preferences</b> to your HairStory profile.<br /></span>
+              In seconds, save and share your <b>personal preferences</b> to your HairStory profile.<br /></span>
       </div>
     </div>
 
