--- a/about-a.html
+++ b/about-a.html
@@ -26,19 +26,30 @@
             <img src="" class="" />
           </div>
           <div class="profileTTitle">
-            <span class="profileTTitleName">Adam Morganaki</span>
+            <span class="profileTTitleName">Adam Morgan</span>
             <br />
-            <span class="profileTTitleTwitter">@atommorgan</span>
+            <a href=""><span class="profileTTitleTwitter">@atommorgan</span></a>
           </div>
         </div>
         <div class="profileBody">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </div>
-        <br />
       </div>
       <div id="profileBox2">
-        <br />
-      </div>
+        <div class="profileHeadT">
+          <div class="profileTImg">
+            <img src="" class="" />
+          </div>
+          <div class="profileTTitle">
+            <span class="profileTTitleName">Kyle Cline</span>
+            <br />
+            <a href=""><span class="profileTTitleTwitter">@kyledcline</span></a>
+          </div>
+        </div>
+        <div class="profileBody">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. <p> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </div>
+      </div>      
     </section>
 
   <div id="footerSnap">
