Add Twitter link

--- a/about-a.html
+++ b/about-a.html
@@ -23,12 +23,12 @@
       <div id="profileBox1">
         <div class="profileHeadT">
           <div class="profileTImg">
-            <img src="" class="" />
+            <img src="images/me.jpeg" class="profilePic" />
           </div>
           <div class="profileTTitle">
             <span class="profileTTitleName">Adam Morgan</span>
             <br />
-            <a href=""><span class="profileTTitleTwitter">@atommorgan</span></a>
+            <a href="https://twitter.com/atommorgan"><span class="profileTTitleTwitter">@atommorgan</span></a>
           </div>
         </div>
         <div class="profileBody">
@@ -43,7 +43,7 @@
           <div class="profileTTitle">
             <span class="profileTTitleName">Kyle Cline</span>
             <br />
-            <a href=""><span class="profileTTitleTwitter">@kyledcline</span></a>
+            <a href="https://twitter.com/kyledcline"><span class="profileTTitleTwitter">@kyledcline</span></a>
           </div>
         </div>
         <div class="profileBody">
