Change avatar and about margins

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
       <div id="profileBox1">
         <div class="profileHeadT">
           <div class="profileTImg">
-            <img src="images/me.jpeg" class="profilePic" />
+            <img src="images/avatar.png" class="profilePic" />
           </div>
           <div class="profileTTitle">
             <span class="profileTTitleName">Adam Morgan</span>
