Add form and click event to both a\'s

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
       <div id="headerDivBody">
         <span id="headerTagline">Create and share all your haircut preferences with any haircare professional in seconds</span>
         <div id="centerInset">
-          <input id="inputMain" type="email" placeholder="email@address.com" />
-            <a href="#">
+          <form action="php-file" method="POST">
+            <input id="inputMain" type="email" placeholder="email@address.com" />
+          </form>
+            <a href="#" onclick="document.forms[0].submit();return false;">
               <div id="actionButton">Get notified when it's ready!</div>
             </a>
             <span id="insetTagline">Available in Spring 2014 for web, iOS, and Android</span>
@@ -85,10 +87,12 @@
           to receive the latest updates on our progress. Sign up now and you'll receive an invite to be one of our first users.
         </span>
         <br />
-        <input class="inputMini" type="email" placeholder="email@address.com" />
-        <a href="#">
+        <form action="php-file" method="POST">
+          <input class="inputMini" type="email" placeholder="email@address.com" />
+        <a href="#" onclick="document.forms[1].submit();return false;">
          <span class="actionButtonMini">Get notified!</span>
         </a>
+        </form>
       </div>
     </div>
   </div>
