Add about copy and email PHP.

--- a/about.html
+++ b/about.html
@@ -32,7 +32,8 @@
           </div>
         </div>
         <div class="profileBody">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          Adam is a graduate of the University of Alabama where he majored in management information systems. He is currently living in Atlanta, Georgia as a software developer at The Home Depot. Previously, he worked as a data analyst at dunnhumbyUSA in Cincinnati, Ohio.
+          <p>Adam also solves Rubik's Cubes competitively.
         </div>
       </div>
       <div id="profileBox2">
@@ -47,7 +48,8 @@
           </div>
         </div>
         <div class="profileBody">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. <p> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          Kyle is a graduate of the University of Alabama where he majored in civil engineering. He is currently living in Busan, South Korea as a manager at National Oilwell Varco.
+          <p>Kyle is a Bitcoin enthusiast. 
         </div>
       </div>      
     </section>
