--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <div id="headerDivBody">
         <span id="headerTagline">Create and share all your haircut preferences with any haircare professional in seconds</span>
         <div id="centerInset">
-          <form action="php-file" method="POST">
-            <input id="inputMain" type="email" placeholder="email@address.com" />
+          <form action="email_signup.php" method="POST">
+            <input id="inputMain" name="email" type="email" placeholder="email@address.com" />
           </form>
             <a href="#" onclick="document.forms[0].submit();return false;">
               <div id="actionButton">Get notified when it's ready!</div>
@@ -87,8 +87,8 @@
           to receive the latest updates on our progress. Sign up now and you'll receive an invite to be one of our first users.
         </span>
         <br />
-        <form action="php-file" method="POST">
-          <input class="inputMini" type="email" placeholder="email@address.com" />
+        <form action="email_signup.php" method="POST">
+          <input class="inputMini" name="email" type="email" placeholder="email@address.com" />
         <a href="#" onclick="document.forms[1].submit();return false;">
          <span class="actionButtonMini">Get notified!</span>
         </a>
