Added Kyle's picture to About page

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
       <div id="profileBox1">
         <div class="profileHeadT">
           <div class="profileTImg">
-            <img src="images/avatar.png" class="profilePic" />
+            <img src="images/adamAvatar.png" class="profilePic" />
           </div>
           <div class="profileTTitle">
             <span class="profileTTitleName">Adam Morgan</span>
@@ -39,7 +39,7 @@
       <div id="profileBox2">
         <div class="profileHeadT">
           <div class="profileTImg">
-            <img src="" class="" />
+            <img src="images/kyleAvatar.png" class="profilePic" />
           </div>
           <div class="profileTTitle">
             <span class="profileTTitleName">Kyle Cline</span>
