testing email again

--- a/index-email.html
+++ b/index-email.html
@@ -24,16 +24,14 @@
       <div id="headerDivBody">
         <span id="headerTagline">Create and share all your haircut preferences with any haircare professional in seconds</span>
         <div id="centerInset">
-          <form action="email_signup.php" method="POST">
+          <form action="email_signup.php" method="post">
             <input id="inputMain" name="email" type="email" placeholder="email@address.com" />
           <!-- </form> -->
-            <!-- <a href="#" onclick="document.forms[0].submit();return false;"> -->
-              <div id="actionButton">
-                <input type="hidden" name="submit">
-                  Get notified when it's ready!
-                </input>
-              </div>
-            <!-- </a> -->
+            <a href="#" onclick="">
+                <div id="actionButton">
+                  Get notified when it's ready! 
+                </div>
+            </a>
           </form>
             <span id="insetTagline">Available in Spring 2014 for web, iOS, and Android</span>
             <div id="buttonImgWrapper"><img src="images/App-store-button.png" class="buttonImg" /><img src="images/Google-play-button.png" class="buttonImg" /></div>
