--- a/index-email.html
+++ b/index-email.html
@@ -27,7 +27,7 @@
           <form action="email_signup.php" method="post">
             <input id="inputMain" name="email" type="email" placeholder="email@address.com" />
           <!-- </form> -->
-            <a href="#" onclick="">
+            <a href="#" onclick="document.forms[0].submit();">
                 <div id="actionButton">
                   Get notified when it's ready! 
                 </div>
