--- a/index-email.html
+++ b/index-email.html
@@ -27,10 +27,10 @@
           <form action="email_signup.php" method="post">
             <input id="inputMain" name="email" type="email" placeholder="email@address.com" />
           <!-- </form> -->
-            <a href="#" onclick="document.forms[0].submit();">
-                <div id="actionButton">
-                  Get notified when it's ready! 
-                </div>
+            <a href="#" onclick="document.forms[0].submit(); return false;">
+            <div id="actionButton">
+              Get notified when it's ready! 
+            </div>
             </a>
           </form>
             <span id="insetTagline">Available in Spring 2014 for web, iOS, and Android</span>
