testing email w/button tag

--- a/index-email.html
+++ b/index-email.html
@@ -26,12 +26,12 @@
         <div id="centerInset">
           <form action="email_signup.php" method="post">
             <input id="inputMain" name="email" type="email" placeholder="email@address.com" />
-          <!-- </form> -->
-            <a href="#" onclick="">
-            <div id="actionButton">
-              Get notified when it's ready! 
-            </div>
-            </a>
+            <!-- <a href="#" onclick=""> -->
+            <!-- <div id="actionButton"> -->
+            <!-- <input id="actionButton" name="submit" type="submit" placeholder="Get notified when it's ready!" /> -->
+            <button id="actionButton" name="submit" type="submit">Get notified when it's ready!</button>
+            <!-- </div> -->
+            <!-- </a> -->
           </form>
             <span id="insetTagline">Available in Spring 2014 for web, iOS, and Android</span>
             <div id="buttonImgWrapper"><img src="images/App-store-button.png" class="buttonImg" /><img src="images/Google-play-button.png" class="buttonImg" /></div>
