testing email signup

--- a/index-email.html
+++ b/index-email.html
@@ -29,7 +29,7 @@
             <!-- <a href="#" onclick=""> -->
             <!-- <div id="actionButton"> -->
             <!-- <input id="actionButton" name="submit" type="submit" placeholder="Get notified when it's ready!" /> -->
-            <button id="actionButton" name="submit" type="submit">Get notified when it's ready!</button>
+            <input id="actionButton" type="button" value="Get notified when it's ready!" />
             <!-- </div> -->
             <!-- </a> -->
           </form>
