--- a/index-email.html
+++ b/index-email.html
@@ -9,7 +9,6 @@
     <link href='http://fonts.googleapis.com/css?family=Roboto:100,300,500' rel='stylesheet' type='text/css'>
     <link href="stylesheet/MyFontsWebfontsKit.css" rel="stylesheet" type="text/css">
     <link href="stylesheet/base.css" rel="stylesheet" type="text/css">
-    <script type="text/javascript" src="prototype.js"></script>
   </head>
 
 <body>
@@ -30,12 +29,9 @@
             <!-- <a href="#" onclick=""> -->
             <!-- <div id="actionButton"> -->
             <!-- <input id="actionButton" name="submit" type="submit" placeholder="Get notified when it's ready!" /> -->
-            <!-- <input id="actionButton" type="button" value="Get notified when it's ready!" /> -->
+            <button id="actionButton" name="submit" type="submit">Get notified when it's ready!</button>
             <!-- </div> -->
             <!-- </a> -->
-            <a href="#" onclick="sendemail();">
-              <div id="actionButton">Get notified when it's ready!</div>
-            </a>
           </form>
             <span id="insetTagline">Available in Spring 2014 for web, iOS, and Android</span>
             <div id="buttonImgWrapper"><img src="images/App-store-button.png" class="buttonImg" /><img src="images/Google-play-button.png" class="buttonImg" /></div>
