--- a/index-email.html
+++ b/index-email.html
@@ -28,8 +28,10 @@
             <input id="inputMain" name="email" type="email" placeholder="email@address.com" />
             <!-- <a href="#" onclick=""> -->
             <!-- <div id="actionButton"> -->
-            <!-- <input id="actionButton" name="submit" type="submit" placeholder="Get notified when it's ready!" /> -->
-            <button id="actionButton" name="submit" type="submit">Get notified when it's ready!</button>
+            <!-- <button id="actionButton" name="submit" type="submit">Get notified when it's ready!</button> -->
+            <a href="#" onclick="">
+              <div id="actionButton">Get notified when it's ready!</div>
+            </a>
             <!-- </div> -->
             <!-- </a> -->
           </form>
