change email and tag

--- a/index-email.html
+++ b/index-email.html
@@ -28,10 +28,10 @@
             <input id="inputMain" name="email" type="email" placeholder="email@address.com" />
             <!-- <a href="#" onclick=""> -->
             <!-- <div id="actionButton"> -->
-            <!-- <button id="actionButton" name="submit" type="submit">Get notified when it's ready!</button> -->
-            <a href="#" onclick="">
+            <button id="actionButton" name="submit" type="submit">Get notified when it's ready!</button>
+            <!-- <a href="#" onclick="">
               <div id="actionButton">Get notified when it's ready!</div>
-            </a>
+            </a> -->
             <!-- </div> -->
             <!-- </a> -->
           </form>
