--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div id="headerDivBody">
         <span id="headerTagline">Create and share all your haircut preferences with any haircare professional in seconds</span>
         <div id="centerInset">
-          <form action="email_signup.php" method="POST">
+          <form action="" method="POST">
             <input id="inputMain" name="email" type="email" placeholder="email@address.com" />
           </form>
             <a href="#" onclick="document.forms[0].submit();return false;">
@@ -87,7 +87,7 @@
           to receive the latest updates on our progress. Sign up now and you'll receive an invite to be one of our first users.
         </span>
         <br />
-        <form action="email_signup.php" method="POST">
+        <form action="" method="POST">
           <input class="inputMini" name="email" type="email" placeholder="email@address.com" />
         <a href="#" onclick="document.forms[1].submit();return false;">
          <span class="actionButtonMini">Get notified!</span>
