--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <nav>
       <div class="footerLinks">
         <a href="index.html"><span class="footerLink">HOME</span></a>
-        <a href="about.html"><span class="footerLink">ABOUT</span></a>
+        <a href="#"><span class="footerLink">ABOUT</span></a>
         <a href="mailto:info@hairstoryapp.com"><span class="footerLink">CONTACT US</span></a>
         <a href="#"><span class="footerLink">TERMS OF USE</span></a>
       </div>
